--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		<script type="text/javascript" src="src/loader.js" app-load="js/main" instance="_x"></script>
+		<script src="src/loader.js" app-load="js/main" instance="_x"></script>
 	</head>
 	<body>
 	</body>
