--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		<script src="src/loader.js" app-load="js/main" instance="_x"></script>
+		<script src="src/loader.js" instance="_x" load="js/main"></script>
 	</head>
 	<body>
 	</body>
